Fix deprecation use warnings in tests